Fix default OAuth URLs and compiler warnings